<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navView"
    >

<group android:checkableBehavior="single">




    <item android:id="@+id/languages"
        android:title="@string/languages">

        <menu>
            <item android:id="@+id/turkish"
                android:title="@string/turkish"
                android:icon="@drawable/language">


            </item>

            <item android:id="@+id/english"
                android:title="@string/english"
                android:icon="@drawable/language">


            </item>
        </menu>

    </item>



    <item android:id="@+id/profile"
        android:title="@string/profile">

        <menu>

            <item android:id="@+id/favorites"
                android:title="@string/favorites"
                android:icon="@drawable/star">

            </item>

            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/logout">

            </item>



        </menu>





    </item>


</group>





</menu>